# ProcessManagerWatchdog

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
.circleci/: config.yml
Dockerfiles/: CMakeLists.txt  Dockerfile.ubuntu.in
Packaging/: CMakePackageMacros.cmake  Packaging.cmake
Protocols/: CMakeLists.txt  WatchdogModule.proto  WatchdogService.proto
Source/: CMakeLists.txt
Source/include/: Communication.hpp  Connection.hpp  Logging.hpp  MessageQueue.hpp  MongoDbEnvironment.hpp  MongoModulesCollection.hpp  MongoServicesCollection.hpp  MongoUsersCollection.hpp  Types.hpp  WatchdogAcceptor.hpp  WatchdogCommon.hpp  WatchdogConnection.hpp  WatchdogModuleRequestsHandlers.hpp  WatchdogServer.hpp  WatchdogServiceRequestsHandlers.hpp  WatchdogSettings.hpp
Source/src/: MongoDbEnvironment.cpp  MongoModulesCollection.cpp  MongoServicesCollection.cpp  MongoUsersCollection.cpp  Types.cpp  Watchdog.service  WatchdogAcceptor.cpp  WatchdogConnection.cpp  WatchdogMain.cpp  WatchdogModuleRequestsHandlers.cpp  WatchdogServer.cpp  WatchdogServiceRequestsHandlers.cpp  WatchdogSettingsMain.cpp
Tests/: CMakeLists.txt  CatchTestsMain.cpp
Tests/MongoDatabaseTests/: CMakeLists.txt  ModulesCollectionPerformanceTest.cpp  ModulesCollectionTest.cpp  ServicesCollectionTest.cpp
Tests/TypesTests/: CMakeLists.txt  ModuleTypeTest.cpp
Tests/TypesTests/MongoDatabaseTests/: ModulesCollectionPerformanceTest.cpp  ModulesCollectionTest.cpp
Tests/WatchdogModulesRequestHandlersTests/: CMakeLists.txt  WatchdogModuleRequestConnectHandlerTest.cpp  WatchdogModuleRequestPingHandlerTest.cpp  WatchdogModuleRequestReconnectHandlerTest.cpp  WatchdogModuleRequestShutdownHandlerTest.cpp
Tests/WatchdogServicesRequestHandlersTests/: CMakeLists.txt  WatchdogServiceRequestConnectHandlerTest.cpp  WatchdogServiceRequestPingHandlerTest.cpp  WatchdogServiceRequestReconnectHandlerTest.cpp  WatchdogServiceRequestShutdownHandlerTest.cpp
Toolkits/: artifactory_downloader.sh
